--- a/main.ipynb
+++ b/main.ipynb
@@ -4,50 +4,64 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-12-14T15:24:58.244726Z",
-     "start_time": "2025-12-14T15:24:58.239490Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import numpy as np\n",
     "from games.tictactoe import TickTackToe\n",
-    "from models.mcts import MCTS"
+    "from models.mcts import MCTS\n",
+    "from models.resnet import ResNet\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import math\n",
+    "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-14T15:23:38.780036Z",
-     "start_time": "2025-12-14T15:23:38.776050Z"
-    }
-   },
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "class DeepZero:\n",
+    "    def __init__(self, model, optimizer, game, args):\n",
+    "        self.model = model\n",
+    "        self.optimizer = optimizer\n",
+    "        self.game = game\n"
+   ],
+   "id": "7d4ba6d16832f068"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "tictactoe = TickTackToe()\n",
     "player = 1\n",
     "\n",
     "args = {\n",
-    "    'C': 1.41,\n",
-    "    'num_search': 100,\n",
+    "    'C': 2,\n",
+    "    'num_search': 1000,\n",
     "}\n",
     "\n",
-    "mcts = MCTS(tictactoe, args)\n",
+    "model = ResNet(tictactoe, 4, 64)\n",
+    "model.eval()\n",
+    "\n",
+    "mcts = MCTS(tictactoe, args, model)\n",
     "\n",
     "state = tictactoe.get_initial_state()"
    ],
    "id": "83e6c74a1acb2f75",
    "outputs": [],
-   "execution_count": 29
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-14T15:20:35.825024Z",
-     "start_time": "2025-12-14T15:19:38.945253Z"
+     "end_time": "2025-12-14T16:27:59.543888Z",
+     "start_time": "2025-12-14T16:27:20.327576Z"
     }
    },
    "cell_type": "code",
@@ -75,7 +89,7 @@
     "        if value == 1:\n",
     "            print(player, \"win\")\n",
     "        else:\n",
-    "            print(player, \"lose\")\n",
+    "             print(player, \"lose\")\n",
     "        break\n",
     "\n",
     "    player = tictactoe.get_opponent(player)"
@@ -90,59 +104,47 @@
       " [0. 0. 0.]\n",
       " [0. 0. 0.]]\n",
       "val_movies [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
-      "[[0. 0. 0.]\n",
-      " [0. 1. 0.]\n",
+      "[[1. 0. 0.]\n",
+      " [0. 0. 0.]\n",
       " [0. 0. 0.]]\n",
-      "[[ 0.  0. -1.]\n",
-      " [ 0.  1.  0.]\n",
+      "[[ 1.  0.  0.]\n",
+      " [ 0. -1.  0.]\n",
       " [ 0.  0.  0.]]\n",
-      "val_movies [0, 1, 3, 5, 6, 7, 8]\n",
-      "[[ 0.  0. -1.]\n",
-      " [ 0.  1.  0.]\n",
-      " [ 1.  0.  0.]]\n",
-      "[[-1.  0. -1.]\n",
-      " [ 0.  1.  0.]\n",
-      " [ 1.  0.  0.]]\n",
-      "val_movies [1, 3, 5, 7, 8]\n",
-      "[[-1.  1. -1.]\n",
-      " [ 0.  1.  0.]\n",
-      " [ 1.  0.  0.]]\n",
-      "[[-1.  1. -1.]\n",
-      " [ 0.  1.  0.]\n",
-      " [ 1. -1.  0.]]\n",
-      "val_movies [3, 5, 8]\n",
-      "[[-1.  1. -1.]\n",
-      " [ 1.  1.  0.]\n",
-      " [ 1. -1.  0.]]\n",
-      "[[-1.  1. -1.]\n",
-      " [ 1.  1. -1.]\n",
-      " [ 1. -1.  0.]]\n",
-      "val_movies [8]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mKeyboardInterrupt\u001B[39m                         Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[25]\u001B[39m\u001B[32m, line 6\u001B[39m\n\u001B[32m      4\u001B[39m valid_moves = tictactoe.get_valid_moves(state)\n\u001B[32m      5\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mval_movies\u001B[39m\u001B[33m\"\u001B[39m, [i \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(tictactoe.action_size) \u001B[38;5;28;01mif\u001B[39;00m valid_moves[i] == \u001B[32m1\u001B[39m])\n\u001B[32m----> \u001B[39m\u001B[32m6\u001B[39m action = \u001B[38;5;28mint\u001B[39m(\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m(\u001B[49m\u001B[33;43mf\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[38;5;132;43;01m{\u001B[39;49;00m\u001B[43mplayer\u001B[49m\u001B[38;5;132;43;01m}\u001B[39;49;00m\u001B[33;43m: \u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m)\u001B[49m)\n\u001B[32m      8\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m valid_moves[action] == \u001B[32m0\u001B[39m:\n\u001B[32m      9\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33maction not val\u001B[39m\u001B[33m\"\u001B[39m)\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/PycharmProjects/DeepZero/.venv/lib/python3.14/site-packages/ipykernel/kernelbase.py:1396\u001B[39m, in \u001B[36mKernel.raw_input\u001B[39m\u001B[34m(self, prompt)\u001B[39m\n\u001B[32m   1394\u001B[39m     msg = \u001B[33m\"\u001B[39m\u001B[33mraw_input was called, but this frontend does not support input requests.\u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m   1395\u001B[39m     \u001B[38;5;28;01mraise\u001B[39;00m StdinNotImplementedError(msg)\n\u001B[32m-> \u001B[39m\u001B[32m1396\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43m_input_request\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m   1397\u001B[39m \u001B[43m    \u001B[49m\u001B[38;5;28;43mstr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mprompt\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m   1398\u001B[39m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43m_get_shell_context_var\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43m_shell_parent_ident\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m   1399\u001B[39m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mget_parent\u001B[49m\u001B[43m(\u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mshell\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m   1400\u001B[39m \u001B[43m    \u001B[49m\u001B[43mpassword\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[32m   1401\u001B[39m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/PycharmProjects/DeepZero/.venv/lib/python3.14/site-packages/ipykernel/kernelbase.py:1441\u001B[39m, in \u001B[36mKernel._input_request\u001B[39m\u001B[34m(self, prompt, ident, parent, password)\u001B[39m\n\u001B[32m   1438\u001B[39m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyboardInterrupt\u001B[39;00m:\n\u001B[32m   1439\u001B[39m     \u001B[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001B[39;00m\n\u001B[32m   1440\u001B[39m     msg = \u001B[33m\"\u001B[39m\u001B[33mInterrupted by user\u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m-> \u001B[39m\u001B[32m1441\u001B[39m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyboardInterrupt\u001B[39;00m(msg) \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[32m   1442\u001B[39m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m:\n\u001B[32m   1443\u001B[39m     \u001B[38;5;28mself\u001B[39m.log.warning(\u001B[33m\"\u001B[39m\u001B[33mInvalid Message:\u001B[39m\u001B[33m\"\u001B[39m, exc_info=\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
-      "\u001B[31mKeyboardInterrupt\u001B[39m: Interrupted by user"
+      "val_movies [1, 2, 3, 5, 6, 7, 8]\n",
+      "[[ 1.  0.  1.]\n",
+      " [ 0. -1.  0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "[[ 1. -1.  1.]\n",
+      " [ 0. -1.  0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "val_movies [3, 5, 6, 7, 8]\n",
+      "[[ 1. -1.  1.]\n",
+      " [ 0. -1.  0.]\n",
+      " [ 0.  1.  0.]]\n",
+      "[[ 1. -1.  1.]\n",
+      " [ 0. -1. -1.]\n",
+      " [ 0.  1.  0.]]\n",
+      "val_movies [3, 6, 8]\n",
+      "[[ 1. -1.  1.]\n",
+      " [ 1. -1. -1.]\n",
+      " [ 0.  1.  0.]]\n",
+      "[[ 1. -1.  1.]\n",
+      " [ 1. -1. -1.]\n",
+      " [-1.  1.  0.]]\n",
+      "val_movies [8]\n",
+      "action not val\n",
+      "[[ 1. -1.  1.]\n",
+      " [ 1. -1. -1.]\n",
+      " [-1.  1.  0.]]\n",
+      "val_movies [8]\n",
+      "1 lose\n"
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 8
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-14T15:23:40.902477Z",
-     "start_time": "2025-12-14T15:23:40.836018Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "while True:\n",
@@ -175,45 +177,16 @@
     "    player = tictactoe.get_opponent(player)"
    ],
    "id": "fe0111dc8edff67b",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n",
-      "[[0. 0. 1.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n",
-      "[[ 0.  0.  1.]\n",
-      " [-1.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "[[ 0.  0.  1.]\n",
-      " [-1.  1.  0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "[[ 0.  0.  1.]\n",
-      " [-1.  1.  0.]\n",
-      " [-1.  0.  0.]]\n",
-      "[[ 1.  0.  1.]\n",
-      " [-1.  1.  0.]\n",
-      " [-1.  0.  0.]]\n",
-      "[[ 1.  0.  1.]\n",
-      " [-1.  1.  0.]\n",
-      " [-1.  0. -1.]]\n",
-      "1 win\n"
-     ]
-    }
-   ],
-   "execution_count": 30
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "d4ffdf1b33741ef4"
+   "id": "d4ffdf1b33741ef4",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
