--- a/main.ipynb
+++ b/main.ipynb
@@ -112,8 +112,8 @@
     "            for epoch in trange(self.args['num_epochs']):\n",
     "                self.train(memory)\n",
     "\n",
-    "            torch.save(self.model.state_dict(), f\"weights/model_{iteration}.pt\")\n",
-    "            torch.save(self.optimizer.state_dict(), f\"weights/optimizer_{iteration}.pt\")"
+    "            torch.save(self.model.state_dict(), f\"weights/model_{iteration}_{self.game}.pt\")\n",
+    "            torch.save(self.optimizer.state_dict(), f\"weights/optimizer_{iteration}_{self.game}..pt\")"
    ],
    "id": "7d4ba6d16832f068",
    "outputs": [],
